trying to fix background video for iOS and others

--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@ MakeItZone                    </a>
 </ul>
 </div>
 <div class="paragraph" id="printing_trigger">
-<img alt="Taz 4" class="img-circle pull-right pop img-responsive" height="15%" id="taz_1" src="images/taz4.jpg" width="15%"><img alt="Taz 4" class="img-circle pull-right pop img-responsive" height="15%" id="taz_2" src="images/taz4.jpg" width="15%">
+<img alt="Taz 4" class="img-responsive img-circle pop pull-right" height="15%" id="taz_1" src="images/taz4.jpg" width="15%"><img alt="Taz 4" class="img-responsive img-circle pop pull-right" height="15%" id="taz_2" src="images/taz4.jpg" width="15%">
 <h3 id="3d-printing">3D Printing</h3>
 <p>We have two Lulzbot Taz printers that are ready to print your designs!</p>
 <p>These are great machines that offer larger-than average build volumes: approximately 25cm x 25cm x 23cm.</p>
@@ -136,7 +136,7 @@ MakeItZone                    </a>
 <p>To start printing your design just <a href="/contact.html">contact us</a> directly, or <a data-3dhubs-widget="button" data-color="light" data-hub-id="55116" data-size="small" data-text="Order a 3D Print" data-type="orderWidget" href="https://www.3dhubs.com/vancouver/hubs/makefamilyfun">Order a 3D Print</a> <script>!function(a,b,c,d){var e,g=(a.getElementsByTagName(b)[0],/^http:/.test(a.location)?"http":"https");a.getElementById(d)||(e=a.createElement(b),e.id=d,e.src=g+"://d3d4ig4df637nj.cloudfront.net/w/2.0.js",e.async=!0,a.body.appendChild(e))}(document,"script",1,"h3d-widgets-js");</script> from our Hub on 3D Hubs.
 </p></img></img></div>
 <div class="paragraph" id="design_trigger">
-<img alt="123D Design" class="img-rounded pull-right pop img-responsive" height="20%" id="design" src="images/123D_Design.png" width="20%">
+<img alt="123D Design" class="img-responsive img-rounded pull-right pop" height="20%" id="design" src="images/123D_Design.png" width="20%">
 <h3 id="3d-design">3D Design</h3>
 <p>Have an idea but don’t know how to use <span class="caps">CAD</span> programs? We can help.</p>
 <p>We have experience with AutoDesk 123D Design, AutoDesk 360 Fusion, as well as FreeCad and OpenSCAD.</p>
@@ -145,7 +145,7 @@ MakeItZone                    </a>
 <p>Use our <a href="/contact.html">contact page</a> to start the conversation today!</p>
 </img></div>
 <div class="paragraph" id="edu_trigger">
-<img alt="class" class="img-circle pull-right pop img-responsive" height="20%" id="education" src="images/julian_launchpad.jpg" width="20%">
+<img alt="class" class="img-responsive img-circle pop pull-right" height="20%" id="education" src="images/julian_launchpad.jpg" width="20%">
 <h3 id="3d-cadcam-and-steam-education">3D <span class="caps">CAD</span>/<span class="caps">CAM</span> and <span class="caps">STEAM</span> Education</h3>
 <p>With experience teaching both individuals and small groups we can help you understand what 3D printing is, and how to leverage it to your advantage. </p>
 <p>We have courses that are suitable for adults and children, and always tailor them to your needs.</p>
